--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,17 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="restaurant_name">Restaurant Name</string>
+    <string name="enter_otp">Enter OTP(4 characters)</string>
+    <string name="new_password">New Password(Min. 4 characters)</string>
+    <string name="submit">Submit</string>
+    <string name="order_history">Order History</string>
+    <string name="choose_from_menu_list_below">Choose from menu list below:</string>
+    <string name="proceed_to_cart">Proceed To Cart</string>
+    <string name="add">Add</string>
+    <string name="ordering_from">Ordering From:</string>
+    <string name="item_name">Item Name</string>
+    <string name="place_order">Place Order</string>
+    <string name="order_success">Your Order has been successfully placed!!</string>
+    <string name="ok">Ok</string>
+    <string name="name">Name</string>
 </resources>
