--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,8 @@
     <string name="order_success">Your Order has been successfully placed!!</string>
     <string name="ok">Ok</string>
     <string name="name">Name</string>
+    <string name="cost_low_to_high">Cost(Low To High)</string>
+    <string name="cost_high_to_low">Cost(High To Low)</string>
+    <string name="rating">Rating</string>
+    <string name="sort_by">Sort By?</string>
 </resources>
